feat: add "Restore from Cupcake App" option with localized strings

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "اختر ممثلًا جديدًا",
   "nanogpt_subtitle": "جميع النماذج الأحدث (GPT-4 ، Claude). \\ nno اشتراك ، ادفع مع Crypto.",
   "narrow": "ضيق",
+  "new_tag": "جديد",
   "new_first_wallet_text": "الحفاظ على سلامة التشفير الخاص بك هو قطعة من الكعكة",
   "new_node_testing": "تجربة العقدة الجديدة",
   "new_subaddress_create": "إنشاء",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "قم باستعادة محفظتك من كود مكون من 24 كلمة",
   "restore_bitcoin_title_from_keys": "استعادة من WIF",
   "restore_description_from_backup": "يمكنك استعادة تطبيق Cake Wallet بالكامل من ملف النسخ الاحتياطي",
+  "restore_description_from_cupcake": "ارتباط بتطبيقنا المصاحب للهواء ، مثبتًا على هاتف ثانٍ.",
   "restore_description_from_hardware_wallet": "استعادة من محفظة أجهزة دفتر الأستاذ",
   "restore_description_from_keys": "قم باستعادة محفظتك من ضغطات المفاتيح المولدة المحفوظة من مفاتيحك الخاصة",
   "restore_description_from_seed": "قم باستعادة محفظتك من الرمز المكون من 25 كلمة أو 13 كلمة",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "استعادة السييد / المفاتيح",
   "restore_spend_key_private": "مفتاح الإنفاق (خاص)",
   "restore_title_from_backup": "استعادة من النسخة الاحتياطية",
+  "restore_title_from_cupcake": "تطبيق كب كيك",
   "restore_title_from_hardware_wallet": "استعادة من محفظة الأجهزة",
   "restore_title_from_keys": "استعادة من المفاتيح",
   "restore_title_from_seed": "استعادة من السييد",
