--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Изберете нов представител",
   "nanogpt_subtitle": "Всички най-нови модели (GPT-4, Claude). \\ Nno абонамент, платете с Crypto.",
   "narrow": "Тесен",
+  "new_tag": "Ново",
   "new_first_wallet_text": "Запазването на криптовалутата ви е парче торта",
   "new_node_testing": "Тестване на нов node",
   "new_subaddress_create": "Създаване",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Възстановяване на портфейл чрез код от 24 думи",
   "restore_bitcoin_title_from_keys": "Възстановяване от WIF",
   "restore_description_from_backup": "Можете да възстановите цялото приложение Cake Wallet от своя резервен файл",
+  "restore_description_from_cupcake": "Връзка с нашето придружително приложение за въздух, инсталирано на втори телефон.",
   "restore_description_from_hardware_wallet": "Възстановяване от хардуерния портфейл на главната книга",
   "restore_description_from_keys": "Възстановяване на портфейл от генерираните от Вашите тайни ключове клавиши",
   "restore_description_from_seed": "Възстановяване на портфейл от кода от 13 или 25 думи",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Възстановяне от Seed/Keys",
   "restore_spend_key_private": "Spend key (публичен)",
   "restore_title_from_backup": "Възстановяване от резервно копие",
+  "restore_title_from_cupcake": "Приложение за кекс",
   "restore_title_from_hardware_wallet": "Възстановяване от хардуерния портфейл",
   "restore_title_from_keys": "Възстановяване от keys",
   "restore_title_from_seed": "Възстановяване от seed",
