--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Vyberte nového zástupce",
   "nanogpt_subtitle": "Všechny nejnovější modely (GPT-4, Claude). \\ Nno předplatné, plaťte krypto.",
   "narrow": "Úzký",
+  "new_tag": "Nový",
   "new_first_wallet_text": "Udržování svého kryptového v bezpečí je kus dortu",
   "new_node_testing": "Testování nového uzlu",
   "new_subaddress_create": "Vytvořit",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Obnovte svou peněženku pomocí kombinace 24 slov",
   "restore_bitcoin_title_from_keys": "Obnovit z WIF",
   "restore_description_from_backup": "Můžete obnovit celou Cake Wallet aplikaci ze souboru se zálohou",
+  "restore_description_from_cupcake": "Odkaz na naši doprovodnou aplikaci Air-mezerou nainstalovanou na druhém telefonu.",
   "restore_description_from_hardware_wallet": "Obnovit z peněženky hardwaru knihy",
   "restore_description_from_keys": "Obnovte svou peněženku pomocí generovaných stisků kláves uložených z vašich soukromých klíčů",
   "restore_description_from_seed": "Obnovte svou peněženku pomocí kombinace 25, nebo 13 slov",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Obnovit ze seedu/klíčů",
   "restore_spend_key_private": "Klíč pro platby (soukromý)",
   "restore_title_from_backup": "Obnovit ze zálohy",
+  "restore_title_from_cupcake": "Cupcake App",
   "restore_title_from_hardware_wallet": "Obnovit z hardwarové peněženky",
   "restore_title_from_keys": "Obnovit z klíčů",
   "restore_title_from_seed": "Obnovit ze seedu",
