--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Wählen Sie einen neuen Vertreter aus",
   "nanogpt_subtitle": "Alle neuesten Modelle (GPT-4, Claude).",
   "narrow": "Eng",
+  "new_tag": "Neu",
   "new_first_wallet_text": "Wenn Sie Ihren Krypto schützen, ist ein Kinderspiel",
   "new_node_testing": "Neuen Knoten testen",
   "new_subaddress_create": "Erstellen",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Stellen Sie Ihre Wallet aus dem 24-Wort-Kombinationscode wieder her",
   "restore_bitcoin_title_from_keys": "Aus WIF wiederherstellen",
   "restore_description_from_backup": "Sie können die gesamte Cake Wallet-App aus Ihrer Sicherungsdatei wiederherstellen",
+  "restore_description_from_cupcake": "Links mit unserer air-gapped Begleitapp, die auf einem zweiten Telefon installiert ist.",
   "restore_description_from_hardware_wallet": "Stellen Sie eine Wallet von Ledger wieder her",
   "restore_description_from_keys": "Stellen Sie Ihr Wallet aus generierten Tastenanschlägen her, die von Ihren privaten Schlüsseln gespeichert wurden",
   "restore_description_from_seed": "Stellen Sie Ihre Wallet aus den 25 Wörtern oder dem 13-Wort-Kombinationscode wieder her",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Seed/Schlüssel wiederherstellen",
   "restore_spend_key_private": "Spend Key (geheim)",
   "restore_title_from_backup": "Aus einer Sicherungsdatei wiederherstellen",
+  "restore_title_from_cupcake": "Cupcake App",
   "restore_title_from_hardware_wallet": "Von Hardware-Wallet wiederherstellen",
   "restore_title_from_keys": "Aus Schlüsseln wiederherstellen",
   "restore_title_from_seed": "Aus Seed wiederherstellen",
