--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Pick a new representative",
   "nanogpt_subtitle": "All the newest models (GPT-4, Claude).\\nNo subscription, pay with crypto.",
   "narrow": "Narrow",
+  "new_tag": "New",
   "new_first_wallet_text": "Keeping your crypto safe is a piece of cake",
   "new_node_testing": "New node testing",
   "new_subaddress_create": "Create",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Restore your wallet from 24 word combination code",
   "restore_bitcoin_title_from_keys": "Restore from WIF",
   "restore_description_from_backup": "You can restore the whole Cake Wallet app from your back-up file",
+  "restore_description_from_cupcake": "Link with our companion air-gapped app, installed on a second phone.",
   "restore_description_from_hardware_wallet": "Restore from a Ledger hardware wallet",
   "restore_description_from_keys": "Restore your wallet from generated keystrokes saved from your private keys",
   "restore_description_from_seed": "Restore your wallet from either the 25 word or 13 word combination code",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Seed/Keys Restore",
   "restore_spend_key_private": "Spend key (private)",
   "restore_title_from_backup": "Restore from backup",
+  "restore_title_from_cupcake": "Cupcake App",
   "restore_title_from_hardware_wallet": "Restore from hardware wallet",
   "restore_title_from_keys": "Restore from keys",
   "restore_title_from_seed": "Restore from seed",
