--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Elija un nuevo representante",
   "nanogpt_subtitle": "Todos los modelos más nuevos (GPT-4, Claude). \\nSin suscripción, pague con cripto.",
   "narrow": "Angosto",
+  "new_tag": "Nuevo",
   "new_first_wallet_text": "Mantener su criptografía a salvo es un pedazo de pastel",
   "new_node_testing": "Prueba nuevos nodos",
   "new_subaddress_create": "Crear",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Restaure su billetera a partir del código de combinación de 24 palabras",
   "restore_bitcoin_title_from_keys": "Restaurar desde WIF",
   "restore_description_from_backup": "Puede restaurar toda la aplicación Cake Wallet desde ysu archivo de respaldo",
+  "restore_description_from_cupcake": "Enlace con nuestra aplicación complementaria de Airpaped, instalada en un segundo teléfono.",
   "restore_description_from_hardware_wallet": "Restaurar desde una billetera de hardware Ledger",
   "restore_description_from_keys": "Restaure su billetera de las pulsaciones de teclas generadas guardadas de sus claves privadas",
   "restore_description_from_seed": "Restaure su billetera desde el código de combinación de 25 palabras i de 13 palabras",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Restauración de semillas / llaves",
   "restore_spend_key_private": "Llave de gasto (privada)",
   "restore_title_from_backup": "Restaurar desde un archivo de respaldo",
+  "restore_title_from_cupcake": "Aplicación de cupcakes",
   "restore_title_from_hardware_wallet": "Restaurar desde una cartera fría",
   "restore_title_from_keys": "Usando las claves",
   "restore_title_from_seed": "Usando la semilla",
