--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Choisissez un nouveau représentant",
   "nanogpt_subtitle": "Tous les modèles les plus récents (GPT-4, Claude).\nPas d'abonnement, payez avec vos crypto-monnaies.",
   "narrow": "Rédruit",
+  "new_tag": "Nouveau",
   "new_first_wallet_text": "Garder vos crypto-monnaies en sécurité est un jeu d'enfant.",
   "new_node_testing": "Test du nouveau nœud",
   "new_subaddress_create": "Créer",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Restaurer votre portefeuille (wallet) à l'aide d'une phrase secrète (seed) de 24 mots",
   "restore_bitcoin_title_from_keys": "Restaurer à partir de WIF",
   "restore_description_from_backup": "Vous pouvez restaurer l'intégralité de l'application Cake Wallet depuis un fichier de sauvegarde",
+  "restore_description_from_cupcake": "Lien avec notre application complémentaire à air, installée sur un deuxième téléphone.",
   "restore_description_from_hardware_wallet": "Restaurer depuis un portefeuille matériel Ledger",
   "restore_description_from_keys": "Restaurer votre portefeuille (wallet) d'après les séquences de touches générées d'après vos clefs privées",
   "restore_description_from_seed": "Restaurer votre portefeuille (wallet) depuis une phrase secrète (seed) de 25 ou 13 mots",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Restaurer depuis Phrase secrète (seed)/Clefs",
   "restore_spend_key_private": "Clef de dépense (spend key) (privée)",
   "restore_title_from_backup": "Restaurer depuis une sauvegarde",
+  "restore_title_from_cupcake": "Application de cupcake",
   "restore_title_from_hardware_wallet": "Restaurer à partir du portefeuille matériel",
   "restore_title_from_keys": "Restaurer depuis des clefs",
   "restore_title_from_seed": "Restaurer depuis une phrase secrète (seed)",
