--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Dauki sabon wakili",
   "nanogpt_subtitle": "Duk sabbin samfuran (GPT-4, CLODE). \\ NNO biyan kuɗi, biya tare da crypto.",
   "narrow": "kunkuntar",
+  "new_tag": "Sabo",
   "new_first_wallet_text": "Tsayawa kayatar da lafiya",
   "new_node_testing": "Sabbin gwajin kumburi",
   "new_subaddress_create": "Ƙirƙiri",
@@ -689,6 +690,7 @@
   "restore_bitcoin_description_from_seed": "Dawo da kwalinku daga 24 lambar haɗin kalma",
   "restore_bitcoin_title_from_keys": "Dawo daga WIF",
   "restore_description_from_backup": "Kuna iya dawo da duk aikace-aikacen Wallet ɗin Cake daga fayil ɗin ajiyar ku",
+  "restore_description_from_cupcake": "Haɗi tare da App na Aikace-aikacen Babi na Aikace-aikacen, shigar a kan wayar ta biyu.",
   "restore_description_from_hardware_wallet": "Maidowa da walatware mai wanki",
   "restore_description_from_keys": "Maido da walat ɗin ku daga maɓallan maɓalli da aka ƙera da aka ajiye daga maɓallan ku na sirri",
   "restore_description_from_seed": "Dawo da kwalinku daga 25 ko 13 lambar haɗin kalma",
@@ -703,6 +705,7 @@
   "restore_seed_keys_restore": "Mayar da iri/Maɓallai",
   "restore_spend_key_private": "Maɓallin kashewa (key kalmar sirri)",
   "restore_title_from_backup": "Dawo daga madadin",
+  "restore_title_from_cupcake": "Appoake App",
   "restore_title_from_hardware_wallet": "Dawowa daga walatware mai wuya",
   "restore_title_from_keys": "Dawo daga maɓallai",
   "restore_title_from_seed": "Maidowa daga iri",
