--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "एक नया प्रतिनिधि चुनें",
   "nanogpt_subtitle": "सभी नवीनतम मॉडल (GPT-4, क्लाउड)। \\ nno सदस्यता, क्रिप्टो के साथ भुगतान करें।",
   "narrow": "सँकरा",
+  "new_tag": "नया",
   "new_first_wallet_text": "अपने क्रिप्टो को सुरक्षित रखना केक का एक टुकड़ा है",
   "new_node_testing": "नई नोड परीक्षण",
   "new_subaddress_create": "सर्जन करना",
@@ -689,6 +690,7 @@
   "restore_bitcoin_description_from_seed": "24 शब्द संयोजन कोड से अपने वॉलेट को पुनर्स्थापित करें",
   "restore_bitcoin_title_from_keys": "WIF से पुनर्स्थापित करें",
   "restore_description_from_backup": "आप से पूरे केक वॉलेट एप्लिकेशन को पुनर्स्थापित कर सकते हैं आपकी बैक-अप फ़ाइल",
+  "restore_description_from_cupcake": "एक दूसरे फोन पर इंस्टॉल किए गए हमारे साथी एयर-गपड़ी ऐप के साथ लिंक।",
   "restore_description_from_hardware_wallet": "एक लेजर हार्डवेयर वॉलेट से पुनर्स्थापित करें",
   "restore_description_from_keys": "अपने वॉलेट को जेनरेट से पुनर्स्थापित करें आपकी निजी कुंजी से कीस्ट्रोक्स सहेजे गए",
   "restore_description_from_seed": "या तो 25 शब्द से अपने वॉलेट को पुनर्स्थापित करें या 13 शब्द संयोजन कोड",
@@ -703,6 +705,7 @@
   "restore_seed_keys_restore": "बीज / कुंजी पुनर्स्थापित करें",
   "restore_spend_key_private": "कुंजी खर्च करें (निजीe)",
   "restore_title_from_backup": "बैक-अप फ़ाइल से पुनर्स्थापित करें",
+  "restore_title_from_cupcake": "कपकेक ऐप",
   "restore_title_from_hardware_wallet": "हार्डवेयर वॉलेट से पुनर्स्थापित करें",
   "restore_title_from_keys": "कुंजी से पुनर्स्थापित करें",
   "restore_title_from_seed": "बीज से पुनर्स्थापित करें",
