--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Odaberite novog predstavnika",
   "nanogpt_subtitle": "Svi najnoviji modeli (GPT-4, Claude). \\ NNO pretplata, plaćajte kripto.",
   "narrow": "Usko",
+  "new_tag": "Novi",
   "new_first_wallet_text": "Čuvanje kriptovaluta je komad torte",
   "new_node_testing": "Provjera novog nodea",
   "new_subaddress_create": "Izradi",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Oporavi novčanik pomoću koda od 12 riječi",
   "restore_bitcoin_title_from_keys": "Oporavi pomoću formata uvoza novčanika (WIF)",
   "restore_description_from_backup": "Možete oporaviti cijelu Cake Wallet aplikaciju pomoću vlastite datoteke sa sigurnosnom kopijom",
+  "restore_description_from_cupcake": "Link s našom pratećom aplikacijom koja se bavi zrakom, instaliranom na drugi telefon.",
   "restore_description_from_hardware_wallet": "Vratite se iz novčanice od knjige",
   "restore_description_from_keys": "Oporavi novčanik pomoću generiranih pritisaka na tipke spremljenih od vlastitih privatnih ključeva (keys)",
   "restore_description_from_seed": "Oporavi novčanik pomoću koda koji sadrži kombinaciju od 25 ili 13 riječi",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Oporavak pomoću pristupnog izraza/ključa",
   "restore_spend_key_private": "Spend key (privatni)",
   "restore_title_from_backup": "Oporavak pomoću sigurnosne kopije",
+  "restore_title_from_cupcake": "Cupcake App",
   "restore_title_from_hardware_wallet": "Vrati iz hardverskog novčanika",
   "restore_title_from_keys": "Oporavi pomoću ključa",
   "restore_title_from_seed": "Oporavi pomoću pristupnog izraza",
