--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Ընտրեք նոր ներկայացուցիչ",
   "nanogpt_subtitle": "Բոլոր ամենանոր մոդելներ (GPT-4, Claude).\\nԱռանց բաժանորդագրության, վճարեք կրիպտոարժույթով",
   "narrow": "Նեղ",
+  "new_tag": "Նոր",
   "new_first_wallet_text": "Ձեր ծպտյալ անվտանգ պահելը տորթի մի կտոր է",
   "new_node_testing": "Նոր հանգույցի փորձարկում",
   "new_subaddress_create": "Ստեղծել",
@@ -686,6 +687,7 @@
   "restore_bitcoin_description_from_seed": "Վերականգնեք ձեր դրամապանակը 24 բառերի համադրությամբ",
   "restore_bitcoin_title_from_keys": "Վերականգնել WIF-ից",
   "restore_description_from_backup": "Դուք կարող եք վերականգնել ամբողջ Cake Wallet հավելվածը ձեր կրկնօրինակ ֆայլից",
+  "restore_description_from_cupcake": "Հղում մեր ուղեկից օդային բացված ծրագրի հետ, տեղադրված երկրորդ հեռախոսով:",
   "restore_description_from_hardware_wallet": "Վերականգնեք Ledger հարդվերային դրամապանակից",
   "restore_description_from_keys": "Վերականգնեք ձեր դրամապանակը ձեր գախտնի բանալիների հիման վրա ստեղծված մուտքագրումներից",
   "restore_description_from_seed": "Վերականգնեք ձեր դրամապպանակը 25 բառերի կամ 13 բառերի համադրությամբ",
@@ -700,6 +702,7 @@
   "restore_seed_keys_restore": "Սերմ/բանալիներ վերականգնել",
   "restore_spend_key_private": "Վճարման բանալի (գախտնի)",
   "restore_title_from_backup": "Վերականգնել կրկնօրինակ ֆայլից",
+  "restore_title_from_cupcake": "Cupcake ծրագիրը",
   "restore_title_from_hardware_wallet": "Վերականգնել հարդվերային դրամապանակից",
   "restore_title_from_keys": "Վերականգնել բանալիներից",
   "restore_title_from_seed": "Վերականգնել սերմից",
