--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Scegli un nuovo rappresentante",
   "nanogpt_subtitle": "Tutti i modelli più recenti (GPT-4, Claude). Nessun abbonamento, paga con cripto.",
   "narrow": "Stretto",
+  "new_tag": "Nuovo",
   "new_first_wallet_text": "Mantenere la tua criptovaluta è un gioco da ragazzi",
   "new_node_testing": "Test novo nodo",
   "new_subaddress_create": "Crea",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Recupera il tuo portafoglio da una combinazione di 12 parole",
   "restore_bitcoin_title_from_keys": "Recupera da WIF",
   "restore_description_from_backup": "Puoi recuperare l'app Cake Wallet per intero dal tuo file di backup",
+  "restore_description_from_cupcake": "Collegamento con la nostra app per gap ad aria accompagnata, installata su un secondo telefono.",
   "restore_description_from_hardware_wallet": "Ripristina da un portafoglio hardware Ledger",
   "restore_description_from_keys": "Recupera il tuo portafoglio da una sequenza di caratteri generati dalle tue chiavi private",
   "restore_description_from_seed": "Recupera il tuo portafoglio da una combinazione di 25 o 13 parole",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Recupera Seme/Chiavi",
   "restore_spend_key_private": "Chiave di Spesa (privata)",
   "restore_title_from_backup": "Recupera da backup",
+  "restore_title_from_cupcake": "App Cupcake",
   "restore_title_from_hardware_wallet": "Ripristina dal portafoglio hardware",
   "restore_title_from_keys": "Recupera dalle chiavi",
   "restore_title_from_seed": "Recupera dal seme",
