--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -523,6 +523,7 @@
   "nano_pick_new_rep": "新しい代表者を選びます",
   "nanogpt_subtitle": "すべての最新モデル（GPT-4、Claude）。\\ nnoサブスクリプション、暗号で支払います。",
   "narrow": "狭い",
+  "new_tag": "新しい",
   "new_first_wallet_text": "暗号を安全に保つことはケーキです",
   "new_node_testing": "新しいノードのテスト",
   "new_subaddress_create": "作成する",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "24ワードの組み合わせコードからウォレットを復元する",
   "restore_bitcoin_title_from_keys": "WIFから復元",
   "restore_description_from_backup": "Cake Walletアプリ全体を復元できますバックアップファイル",
+  "restore_description_from_cupcake": "2番目の電話にインストールされたコンパニオンギャップアプリにリンクします。",
   "restore_description_from_hardware_wallet": "元帳ハードウェアウォレットから復元します",
   "restore_description_from_keys": "生成されたウォレットを復元します秘密鍵から保存されたキーストローク",
   "restore_description_from_seed": "25ワードからウォレットを復元しますまたは13ワードの組み合わせコード",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "シード/キーの復元",
   "restore_spend_key_private": "キーを使う (プライベート)",
   "restore_title_from_backup": "バックアップファイルから復元する",
+  "restore_title_from_cupcake": "カップケーキアプリ",
   "restore_title_from_hardware_wallet": "ハードウェアウォレットから復元します",
   "restore_title_from_keys": "キーから復元する",
   "restore_title_from_seed": "シードから復元",
