--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "새 대표자 선택",
   "nanogpt_subtitle": "모든 최신 모델 (GPT-4, Claude).\n구독 없이 암호화폐로 결제.",
   "narrow": "좁게",
+  "new_tag": "새로운",
   "new_first_wallet_text": "암호화폐를 안전하게 보관하는 것은 식은 죽 먹기",
   "new_node_testing": "새 노드 테스트 중",
   "new_subaddress_create": "생성",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "24단어 조합 코드로 지갑 복구",
   "restore_bitcoin_title_from_keys": "WIF에서 복구",
   "restore_description_from_backup": "백업 파일에서 전체 Cake Wallet 앱을 복구할 수 있습니다",
+  "restore_description_from_cupcake": "두 번째 전화에 설치된 동반자 에어 갭 앱과 링크하십시오.",
   "restore_description_from_hardware_wallet": "Ledger 하드웨어 지갑에서 복구",
   "restore_description_from_keys": "개인 키에서 저장된 키 입력으로 지갑 복구",
   "restore_description_from_seed": "25단어 또는 13단어 조합 코드로 지갑 복구",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "시드/키 복구",
   "restore_spend_key_private": "지출 키 (개인)",
   "restore_title_from_backup": "백업에서 복구",
+  "restore_title_from_cupcake": "컵 케이크 앱",
   "restore_title_from_hardware_wallet": "하드웨어 지갑에서 복구",
   "restore_title_from_keys": "키에서 복구",
   "restore_title_from_seed": "시드에서 복구",
