--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "အသစ်တစ်ခုကိုရွေးပါ",
   "nanogpt_subtitle": "အားလုံးနောက်ဆုံးပေါ်မော်ဒယ်များ (GPT-4, Claude) ။ \\ nno subscription, crypto နှင့်အတူပေးဆောင်။",
   "narrow": "ကျဉ်းသော",
+  "new_tag": "သစ်သော",
   "new_first_wallet_text": "သင်၏ Crypto Safe ကိုလုံခြုံအောင်ပြုလုပ်ခြင်းသည်ကိတ်မုန့်တစ်မျိုးဖြစ်သည်",
   "new_node_testing": "နှာခေါင်း အသစ်စမ်းသပ်ခြင်း။",
   "new_subaddress_create": "ဖန်တီးပါ။",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "24 စကားလုံးပေါင်းစပ်ကုဒ်မှ သင့်ပိုက်ဆံအိတ်ကို ပြန်ယူပါ။",
   "restore_bitcoin_title_from_keys": "WIF မှ ပြန်လည်ရယူပါ။",
   "restore_description_from_backup": "သင့်အရန်ဖိုင်မှ Cake Wallet အက်ပ်တစ်ခုလုံးကို သင်ပြန်လည်ရယူနိုင်သည်။",
+  "restore_description_from_cupcake": "ဒုတိယဖုန်းတွင်တပ်ဆင်ထားသောကျွန်ုပ်တို့၏အဖော် Air-Gensess App နှင့်ချိတ်ဆက်ပါ။",
   "restore_description_from_hardware_wallet": "Ledger ဟာ့ဒ်ဝဲပိုက်ဆံအိတ်မှ Restore",
   "restore_description_from_keys": "သင့်ကိုယ်ပိုင်သော့များမှ သိမ်းဆည်းထားသော ထုတ်ပေးထားသော သော့ချက်များမှ သင့်ပိုက်ဆံအိတ်ကို ပြန်လည်ရယူပါ။",
   "restore_description_from_seed": "25 စကားလုံး သို့မဟုတ် 13 စကားလုံးပေါင်းစပ်ကုဒ်မှ သင့်ပိုက်ဆံအိတ်ကို ပြန်လည်ရယူပါ။",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "မျိုးစေ့/သော့များ ပြန်လည်ရယူပါ။",
   "restore_spend_key_private": "သော့သုံးရန် (သီးသန့်)",
   "restore_title_from_backup": "အရန်သိမ်းခြင်းမှ ပြန်လည်ရယူပါ။",
+  "restore_title_from_cupcake": "Cupcake app",
   "restore_title_from_hardware_wallet": "ဟာ့ဒ်ဝဲပိုက်ဆံအိတ်မှ restore",
   "restore_title_from_keys": "သော့များမှ ပြန်လည်ရယူပါ။",
   "restore_title_from_seed": "မျိုးစေ့မှပြန်လည်ရယူပါ။",
