--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Wybierz nowego przedstawiciela",
   "nanogpt_subtitle": "Wszystkie najnowsze modele (GPT-4, Claude). \\ Nno subskrypcja, płacą za pomocą kryptografii.",
   "narrow": "Wąski",
+  "new_tag": "Nowy",
   "new_first_wallet_text": "Zachowanie bezpieczeństwa kryptograficznego jest kawałkiem ciasta",
   "new_node_testing": "Testowanie nowych węzłów",
   "new_subaddress_create": "Stwórz",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Przywróć swój portfel z frazy seed złożonej z 24 słów",
   "restore_bitcoin_title_from_keys": "Przywróć z klucza prywatnego",
   "restore_description_from_backup": "Możesz przywrócić całą aplikację Cake Wallet z pliku kopii zapasowej",
+  "restore_description_from_cupcake": "Połącz z naszą towarzyszącą aplikacją powietrzną, zainstalowaną na drugim telefonie.",
   "restore_description_from_hardware_wallet": "Przywróć z portfela sprzętowego księgi",
   "restore_description_from_keys": "Przywróć swój portfel z kluczy prywatnych",
   "restore_description_from_seed": "Przywróć swój portfel z 25 lub 13-słownej frazy seed",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Przywracanie z frazy seed / kluczy",
   "restore_spend_key_private": "Podaj prywatny klucz wglądu (view key)",
   "restore_title_from_backup": "Przywróć z pliku kopii zapasowej",
+  "restore_title_from_cupcake": "Aplikacja Cupcake",
   "restore_title_from_hardware_wallet": "Przywróć z portfela sprzętowego",
   "restore_title_from_keys": "Przywróć z kluczy",
   "restore_title_from_seed": "Przywróć z frazy seed",
