--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Выберите нового представителя",
   "nanogpt_subtitle": "Все новейшие модели (GPT-4, Claude). \\ Nno Подписка, платите с крипто.",
   "narrow": "Узкий",
+  "new_tag": "Новый",
   "new_first_wallet_text": "Сохранение вашего криптографии - это кусок торта",
   "new_node_testing": "Тестирование новой ноды",
   "new_subaddress_create": "Создать",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Вы можете восстановить кошелёк используя 24-ти значную мнемоническую фразу",
   "restore_bitcoin_title_from_keys": "Восстановить с помощью WIF",
   "restore_description_from_backup": "Вы можете восстановить Cake Wallet из вашего back-up файла",
+  "restore_description_from_cupcake": "Ссылка с нашим приложением с авиакомпаниями, установленным на втором телефоне.",
   "restore_description_from_hardware_wallet": "Восстановите из оборудования",
   "restore_description_from_keys": "Вы можете восстановить кошелёк с помощью приватных ключей",
   "restore_description_from_seed": "Вы можете восстановить кошелёк используя 25-ти значную мнемоническую фразу",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Восстановить из мнемонической фразы/ключей",
   "restore_spend_key_private": "Приватный ключ траты",
   "restore_title_from_backup": "Восстановить из back-up файла",
+  "restore_title_from_cupcake": "Приложение кекса",
   "restore_title_from_hardware_wallet": "Восстановить из аппаратного кошелька",
   "restore_title_from_keys": "Восстановить с помощью ключей",
   "restore_title_from_seed": "Восстановить из мнемонической фразы",
