--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "เลือกตัวแทนใหม่",
   "nanogpt_subtitle": "รุ่นใหม่ล่าสุดทั้งหมด (GPT-4, Claude). การสมัครสมาชิก \\ nno, จ่ายด้วย crypto",
   "narrow": "แคบ",
+  "new_tag": "ใหม่",
   "new_first_wallet_text": "การรักษา crypto ของคุณให้ปลอดภัยเป็นเค้กชิ้นหนึ่ง",
   "new_node_testing": "การทดสอบโหนดใหม่",
   "new_subaddress_create": "สร้าง",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "กู้กระเป๋าของคุณจากรหัสผสมของ 24 คำ",
   "restore_bitcoin_title_from_keys": "กู้จาก WIF",
   "restore_description_from_backup": "คุณสามารถกู้แอพ Cake Wallet ทั้งหมดจากไฟล์สำรองข้อมูลของคุณ",
+  "restore_description_from_cupcake": "เชื่อมโยงกับแอพที่มี Gapped Air-Gapped ของเราติดตั้งบนโทรศัพท์เครื่องที่สอง",
   "restore_description_from_hardware_wallet": "กู้คืนจากกระเป๋าเงินฮาร์ดแวร์บัญชีแยกประเภท",
   "restore_description_from_keys": "กู้กระเป๋าของคุณจากการกดปุ่มที่สร้างขึ้นจาก private keys ของคุณที่บันทึกไว้",
   "restore_description_from_seed": "กู้กระเป๋าของคุณจากรหัสผสมของ 25 คำหรือ 13 คำ",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "กู้จาก Seed/Keys",
   "restore_spend_key_private": "คีย์สำหรับใช้ (ส่วนตัว)",
   "restore_title_from_backup": "กู้จากการสำรองข้อมูล",
+  "restore_title_from_cupcake": "แอพคัพเค้ก",
   "restore_title_from_hardware_wallet": "กู้คืนจากกระเป๋าเงินฮาร์ดแวร์",
   "restore_title_from_keys": "กู้จาก keys",
   "restore_title_from_seed": "กู้จาก seed",
