--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Pumili ng isang bagong representative",
   "nanogpt_subtitle": "Ang lahat ng mga pinakabagong modelo (GPT-4, Claude). \nNo subscription, magbayad gamit ang crypto.",
   "narrow": "Makitid",
+  "new_tag": "Bago",
   "new_first_wallet_text": "Ang pagpapanatiling ligtas sa iyong crypto ay isang piraso ng cake",
   "new_node_testing": "Bagong node testing",
   "new_subaddress_create": "Lumikha",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Ibalik ang iyong wallet mula sa 24 na salita na seed",
   "restore_bitcoin_title_from_keys": "Ibalik mula sa WIF",
   "restore_description_from_backup": "Maari mong ibalik ang buong Cake Wallet app sa iyong backup file",
+  "restore_description_from_cupcake": "Mag-link sa aming kasamang naka-air-gapped app, na naka-install sa isang pangalawang telepono.",
   "restore_description_from_hardware_wallet": "Ibalik mula sa isang Ledger hardware wallet",
   "restore_description_from_keys": "Ibalik ang iyong wallet mula sa nabuong mga keystrokes na na-save mula sa iyong mga private key",
   "restore_description_from_seed": "Ibalik ang iyong wallet mula sa alinman sa 25 na salita o 13 na salita na seed",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Ibalik mula sa Seed/Keys",
   "restore_spend_key_private": "Spend key (private)",
   "restore_title_from_backup": "Ibalik mula sa backup",
+  "restore_title_from_cupcake": "Cupcake app",
   "restore_title_from_hardware_wallet": "Ibalik mula sa hardware wallet",
   "restore_title_from_keys": "Ibalik mula sa keys",
   "restore_title_from_seed": "Ibalik mula sa seed",
