--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Yeni bir temsilci seçin",
   "nanogpt_subtitle": "En yeni modeller (GPT-4, Claude). \\ Nno aboneliği, kripto ile ödeme yapın.",
   "narrow": "Dar",
+  "new_tag": "Yeni",
   "new_first_wallet_text": "Kripto'nuzu güvende tutmak bir parça kek",
   "new_node_testing": "Yeni düğüm test ediliyor",
   "new_subaddress_create": "Oluştur",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Cüzdanınızı 24 kelimelik kombinasyon kodundan geri yükle",
   "restore_bitcoin_title_from_keys": "WIF'den geri yükle",
   "restore_description_from_backup": "Yedek dosyandan tüm Cake Wallet uygulamasını geri döndürebilirsin",
+  "restore_description_from_cupcake": "İkinci bir telefona yüklü eşlik eden hava kaplı uygulamamızla bağlantı kurun.",
   "restore_description_from_hardware_wallet": "Bir defter donanım cüzdanından geri yükleyin",
   "restore_description_from_keys": "Cüzdanınızı özel anahtarlarınızdan kaydedilen oluşturulmuş tuş vuruşlarından geri yükleyin",
   "restore_description_from_seed": "Cüzdanınızı 25 veya 13 kelimelik kombinasyon kodundan geri döndürün",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Tohumu/Anahtarları Geri Döndür",
   "restore_spend_key_private": "Harcama anahtarı (Özel)",
   "restore_title_from_backup": "Yedekten geri döndür",
+  "restore_title_from_cupcake": "Cupcake uygulaması",
   "restore_title_from_hardware_wallet": "Donanım cüzdanından geri yükleme",
   "restore_title_from_keys": "Anahtarlardan geri döndür",
   "restore_title_from_seed": "Tohumdan geri döndür",
