--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Виберіть нового представника",
   "nanogpt_subtitle": "Усі найновіші моделі (GPT-4, Claude). \\ Nno підписка, оплата криптовалютою.",
   "narrow": "вузькі",
+  "new_tag": "Новачок",
   "new_first_wallet_text": "Зберігання вашої криптовалюти це просто як шматок торта",
   "new_node_testing": "Тестування нового вузла",
   "new_subaddress_create": "Створити",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Ви можете відновити гаманець використовуючи 24-ти слівну мнемонічну фразу",
   "restore_bitcoin_title_from_keys": "Відновити за допомогою WIF",
   "restore_description_from_backup": "Ви можете відновити Cake Wallet з вашого резервного файлу",
+  "restore_description_from_cupcake": "Зв'язок з нашим супутничим додатком, встановленим на другому телефоні.",
   "restore_description_from_hardware_wallet": "Відновлення з апаратного гаманця",
   "restore_description_from_keys": "Ви можете відновити гаманець за допомогою приватних ключів",
   "restore_description_from_seed": "Ви можете відновити гаманець використовуючи 25-ти слівну мнемонічну фразу",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Відновити за допомогою мнемонічної фрази/ключів",
   "restore_spend_key_private": "Приватний ключ витрати",
   "restore_title_from_backup": "Відновити із резервного файлу",
+  "restore_title_from_cupcake": "Додаток для кексів",
   "restore_title_from_hardware_wallet": "Відновити з апаратного гаманця",
   "restore_title_from_keys": "Відновити за допомогою ключів",
   "restore_title_from_seed": "Відновити з мнемонічної фрази",
