--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "ایک نیا نمائندہ منتخب کریں",
   "nanogpt_subtitle": "تمام تازہ ترین ماڈل (GPT-4 ، کلاڈ)۔ n n no سبسکرپشن ، کریپٹو کے ساتھ ادائیگی کریں۔",
   "narrow": "تنگ",
+  "new_tag": "نیا",
   "new_first_wallet_text": "اپنے کریپٹو کو محفوظ رکھنا کیک کا ایک ٹکڑا ہے",
   "new_node_testing": "نیا نوڈ ٹیسٹنگ",
   "new_subaddress_create": "بنانا",
@@ -689,6 +690,7 @@
   "restore_bitcoin_description_from_seed": "24 الفاظ کے مجموعہ کوڈ سے اپنے بٹوے کو بحال کریں۔",
   "restore_bitcoin_title_from_keys": "WIF سے بحال کریں۔",
   "restore_description_from_backup": "آپ اپنی بیک اپ فائل سے پوری کیک والیٹ ایپ کو بحال کر سکتے ہیں۔",
+  "restore_description_from_cupcake": "دوسرے فون پر نصب ، ہمارے ساتھی ایئر گیپڈ ایپ کے ساتھ لنک کریں۔",
   "restore_description_from_hardware_wallet": "لیجر ہارڈ ویئر پرس سے بحال کریں",
   "restore_description_from_keys": "اپنے بٹوے کو اپنی نجی کلیدوں سے محفوظ کردہ کی اسٹروکس سے بحال کریں۔",
   "restore_description_from_seed": "اپنے بٹوے کو 25 لفظ یا 13 الفاظ کے مجموعہ کوڈ سے بحال کریں۔",
@@ -703,6 +705,7 @@
   "restore_seed_keys_restore": "بیج/کیز کی بحالی",
   "restore_spend_key_private": "خرچ کی کلید (نجی)",
   "restore_title_from_backup": "بیک اپ سے بحال کریں۔",
+  "restore_title_from_cupcake": "کپ کیک ایپ",
   "restore_title_from_hardware_wallet": "ہارڈ ویئر پرس سے بحال کریں",
   "restore_title_from_keys": "چابیاں سے بحال کریں۔",
   "restore_title_from_seed": "بیج سے بحال کریں۔",
