--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -521,6 +521,7 @@
   "nano_pick_new_rep": "Chọn đại diện mới",
   "nanogpt_subtitle": "Tất cả các mẫu mới nhất (GPT-4, Claude).\\nKhông cần đăng ký, thanh toán bằng tiền điện tử.",
   "narrow": "Hẹp",
+  "new_tag": "Mới",
   "new_first_wallet_text": "Giữ tiền điện tử của bạn an toàn là một miếng bánh",
   "new_node_testing": "Đang thử nghiệm nút mới",
   "new_subaddress_create": "Tạo",
@@ -685,6 +686,7 @@
   "restore_bitcoin_description_from_seed": "Khôi phục ví của bạn từ mã kết hợp 24 từ",
   "restore_bitcoin_title_from_keys": "Khôi phục từ WIF",
   "restore_description_from_backup": "Bạn có thể khôi phục toàn bộ ứng dụng Cake Wallet từ tệp sao lưu của bạn",
+  "restore_description_from_cupcake": "Liên kết với Ứng dụng Air Air của chúng tôi, được cài đặt trên điện thoại thứ hai.",
   "restore_description_from_hardware_wallet": "Khôi phục từ ví phần cứng Ledger",
   "restore_description_from_keys": "Khôi phục ví của bạn từ các thao tác nhập được lưu từ khóa riêng của bạn",
   "restore_description_from_seed": "Khôi phục ví của bạn từ mã kết hợp 25 từ hoặc 13 từ",
@@ -699,6 +701,7 @@
   "restore_seed_keys_restore": "Khôi phục hạt giống/khóa",
   "restore_spend_key_private": "Khóa chi tiêu (riêng tư)",
   "restore_title_from_backup": "Khôi phục từ sao lưu",
+  "restore_title_from_cupcake": "Ứng dụng Cupcake",
   "restore_title_from_hardware_wallet": "Khôi phục từ ví phần cứng",
   "restore_title_from_keys": "Khôi phục từ khóa",
   "restore_title_from_seed": "Khôi phục từ hạt giống",
