--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -523,6 +523,7 @@
   "nano_pick_new_rep": "Mu aṣoju tuntun kan",
   "nanogpt_subtitle": "Gbogbo awọn awoṣe tuntun (GPT-4, Claude). \\ Nno alabapin kan, sanwo pẹlu Crypto.",
   "narrow": "Taara",
+  "new_tag": "Tuntun",
   "new_first_wallet_text": "Tọju ẹrọ ti o ni aabo rẹ jẹ nkan ti akara oyinbo kan",
   "new_node_testing": "A ń dán apẹka títun wò",
   "new_subaddress_create": "Ṣe é",
@@ -688,6 +689,7 @@
   "restore_bitcoin_description_from_seed": "Mú àpamọ́wọ́ yín padà láti àkànpọ̀ ọlọ́rọ̀ ẹ̀ẹ̀mẹrinlélógun",
   "restore_bitcoin_title_from_keys": "Mú padà láti WIF",
   "restore_description_from_backup": "Ẹ lè fi ẹ̀dà nípamọ́ yín mú odindi Cake Wallet áàpù padà.",
+  "restore_description_from_cupcake": "Ọna asopọ pẹlu Ohun elo Wa-ilẹ wa, ti o fi sori foonu keji.",
   "restore_description_from_hardware_wallet": "Mu pada kuro ninu apamọwọ ohun elo ti o yanilenu",
   "restore_description_from_keys": "Mú àpamọ́wọ́ yín padà láti àwọn àtẹ̀ nípamọ́ láti àwọn kọ́kọ́rọ́ àdáni yín",
   "restore_description_from_seed": "Ẹ mú àpamọ́wọ́ yín padà láti àkànpọ̀ ọlọ́rọ̀ ẹ̀ẹ̀marùndínlọgbọ̀n tàbí ti mẹ́talá.",
@@ -702,6 +704,7 @@
   "restore_seed_keys_restore": "Mú hóró/kọ́kọ́rọ́ padà",
   "restore_spend_key_private": "kọ́kọ́rọ́ àdáni fún níná",
   "restore_title_from_backup": "Fi ẹ̀dà nípamọ́ mú padà",
+  "restore_title_from_cupcake": "Ohun elo app",
   "restore_title_from_hardware_wallet": "Mu pada kuro ninu apamọwọ ohun elo",
   "restore_title_from_keys": "Fi kọ́kọ́rọ́ ṣẹ̀dá",
   "restore_title_from_seed": "Fi hóró mú padà",
