--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "选择新代表",
   "nanogpt_subtitle": "所有最新型号（GPT-4，Claude）。\\ nno订阅，用加密货币付款。",
   "narrow": "狭窄的",
+  "new_tag": "新的",
   "new_first_wallet_text": "保持加密货币是一件小菜一碟",
   "new_node_testing": "新节点测试",
   "new_subaddress_create": "创建",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "从24个文字的组成码恢复您的钱包",
   "restore_bitcoin_title_from_keys": "从WIF还原",
   "restore_description_from_backup": "您可以从还原整个Cake Wallet应用您的备份文件",
+  "restore_description_from_cupcake": "与我们的配套空调应用程序链接，安装在第二台手机上。",
   "restore_description_from_hardware_wallet": "从分类帐硬件钱包还原",
   "restore_description_from_keys": "使用私钥恢复钱包",
   "restore_description_from_seed": "从25个字中恢复您的钱包或13个字的组合码",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "种子/密钥还原",
   "restore_spend_key_private": "Spend私钥",
   "restore_title_from_backup": "从备份文件还原",
+  "restore_title_from_cupcake": "蛋糕应用",
   "restore_title_from_hardware_wallet": "从硬件钱包还原",
   "restore_title_from_keys": "从密钥还原",
   "restore_title_from_seed": "从种子还原",
