--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Pilih perwakilan baru",
   "nanogpt_subtitle": "Semua model terbaru (GPT-4, Claude). \\ Nno langganan, bayar dengan crypto.",
   "narrow": "Sempit",
+  "new_tag": "Baru",
   "new_first_wallet_text": "Menjaga crypto Anda aman adalah sepotong kue",
   "new_node_testing": "Pengujian node baru",
   "new_subaddress_create": "Buat",
@@ -689,6 +690,7 @@
   "restore_bitcoin_description_from_seed": "Pulihkan dompet Anda dari kombinasi kode 24 kata",
   "restore_bitcoin_title_from_keys": "Pulihkan dari WIF",
   "restore_description_from_backup": "Anda dapat memulihkan seluruh aplikasi Cake Wallet dari file cadangan Anda",
+  "restore_description_from_cupcake": "Tautkan dengan aplikasi pendamping udara kami, diinstal pada telepon kedua.",
   "restore_description_from_hardware_wallet": "Kembalikan dari dompet perangkat keras Ledger",
   "restore_description_from_keys": "Pulihkan dompet Anda dari tombol yang dihasilkan yang disimpan dari kunci pribadi Anda",
   "restore_description_from_seed": "Pulihkan dompet Anda dari kombinasi kode 25 atau 13 kata",
@@ -704,6 +706,7 @@
   "restore_seed_keys_restore": "Pulihkan Seed/Kunci",
   "restore_spend_key_private": "Habiskan kunci (pribadi)",
   "restore_title_from_backup": "Pulihkan dari cadangan",
+  "restore_title_from_cupcake": "Aplikasi Cupcake",
   "restore_title_from_hardware_wallet": "Kembalikan dari dompet perangkat keras",
   "restore_title_from_keys": "Pulihkan dari kunci",
   "restore_title_from_seed": "Pulihkan dari seed",
