--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -522,6 +522,7 @@
   "nano_pick_new_rep": "Kies een nieuwe vertegenwoordiger",
   "nanogpt_subtitle": "Alle nieuwste modellen (GPT-4, Claude). \\ Nno-abonnement, betalen met crypto.",
   "narrow": "Smal",
+  "new_tag": "Nieuw",
   "new_first_wallet_text": "Je crypto veilig houden is een fluitje van een cent",
   "new_node_testing": "Nieuwe knooppunttest",
   "new_subaddress_create": "Creëren",
@@ -687,6 +688,7 @@
   "restore_bitcoin_description_from_seed": "Herstel uw portemonnee met een combinatiecode van 24 woorden",
   "restore_bitcoin_title_from_keys": "Herstel van WIF",
   "restore_description_from_backup": "Je kunt de hele Cake Wallet-app herstellen van uw back-upbestand",
+  "restore_description_from_cupcake": "Link met onze bijbehorende air-happed-app, geïnstalleerd op een tweede telefoon.",
   "restore_description_from_hardware_wallet": "Herstel van een grootboekhardware -portemonnee",
   "restore_description_from_keys": "Herstel uw portemonnee van gegenereerd toetsaanslagen opgeslagen van uw privésleutels",
   "restore_description_from_seed": "Herstel uw portemonnee van het 25 woord of 13 woord combinatiecode",
@@ -701,6 +703,7 @@
   "restore_seed_keys_restore": "Zaad / sleutels herstellen",
   "restore_spend_key_private": "Sleutel uitgeven (privaat)",
   "restore_title_from_backup": "Herstellen vanuit een back-upbestand",
+  "restore_title_from_cupcake": "Cupcake -app",
   "restore_title_from_hardware_wallet": "Herstel van de hardware -portemonnee",
   "restore_title_from_keys": "Herstel van sleutels",
   "restore_title_from_seed": "Herstel van zaad",
