--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -523,6 +523,7 @@
   "nano_pick_new_rep": "Escolha um novo representante",
   "nanogpt_subtitle": "Todos os modelos mais recentes (GPT-4, Claude). \\nSem assinatura, pague com criptomoeda.",
   "narrow": "Estreito",
+  "new_tag": "Novo",
   "new_first_wallet_text": "Manter sua cripto segura é um pedaço de bolo",
   "new_node_testing": "Teste de novo nó",
   "new_subaddress_create": "Criar",
@@ -689,6 +690,7 @@
   "restore_bitcoin_description_from_seed": "Restaure sua carteira a partir de um código de combinação de 24 palavras",
   "restore_bitcoin_title_from_keys": "Restaurar de WIF",
   "restore_description_from_backup": "Você pode restaurar todo o aplicativo Cake Wallet de seu arquivo de backup",
+  "restore_description_from_cupcake": "Link para nosso aplicativo Companion Air-Gapped, instalado em um segundo telefone.",
   "restore_description_from_hardware_wallet": "Restaurar de uma carteira de hardware do Ledger",
   "restore_description_from_keys": "Restaure sua carteira a partir de suas chaves privadas",
   "restore_description_from_seed": "Restaure sua carteira a partir de semente com 25 palavras ou 13 palavras",
@@ -703,6 +705,7 @@
   "restore_seed_keys_restore": "Restauração com sementes/chaves",
   "restore_spend_key_private": "Chave de gastos (privada)",
   "restore_title_from_backup": "Restaurar a partir de um arquivo de backup",
+  "restore_title_from_cupcake": "Aplicativo de cupcake",
   "restore_title_from_hardware_wallet": "Restaurar da carteira de hardware",
   "restore_title_from_keys": "Restaurar a partir de chaves",
   "restore_title_from_seed": "Restaurar a partir de semente",
